--- a/examples/simple/index.html
+++ b/examples/simple/index.html
@@ -1,9 +1,10 @@
 <html>
   <head>
     <title>Just a test</title>
-    
+
   </head>
   <body>
+    <div id="app"></div>
     <script src='bundle.js'></script>
   </body>
 </html>
